# hwdesign_HW

./: .gitignore  pyproject.toml
demos/pipeline/: pipeline_demo.ipynb  poly.cpp  poly.hpp  poly_demo.py  poly_tb.cpp  run_hls_poly.tcl
demos/project/: matchfilt.md  readme.md
demos/sharedmem/: basic.cpp  basic.ipynb  basic_tb.cpp
demos/stream/: avg_demo.ipynb  avgfilt.h  poly.cpp  poly.hpp  poly_demo.ipynb  poly_tb.cpp  run_hls_avg.tcl  run_hls_poly.tcl  tb_avgfilt.cpp  view_timing.ipynb  vitis_run.txt
demos/stream/python/: datastructs.py  gen_vitis_code.py  view_timing.ipynb
demos/stream/stream_vitis/: avgfilt.cpp  cmd_hdr.h  poly_block.cpp  poly_block.h  resp_footer.h  resp_hdr.h  run_hls_poly.tcl  stream_utils.h  tb_poly_block.cpp
demos/stream/vcd/: dump_avg.vcd  dump_poly.vcd
docs/aiautograder/: howto.md
docs/demos/fifoif/: index.md  overview.md  poly.md
docs/demos/loopopt/: index.md  poly.md
docs/labs/: index.md
docs/nyu/: units.md
docs/projects/: ai_workflow.md  cg.md  final.md  index.md  planning.md
labs/cubic/: tb_cubic.sv
labs/intersect/: line_inter.hpp  line_inter_tb.cpp  run_hls.tcl  run_tests.py
labs/rootsolve/: run_hls.tcl  run_tests.py
pysilicon/: __init__.py  _version.py
pysilicon/scripts/: pysilicon_copy.py
units/unit01_basic_logic/: basic_logic_v1.pptx
units/unit04_procif/: procif.pptx
units/unit05_fifo/: fifo.pptx
units/unit06_timing/: timing.pptx
units/unit07_loopopt/: loopopt.pptx
units/unit08_sharedmem/: sharedmem.pptx
xilinxutils/: vitisstructs.py
xilinxutils/old/: dataschema.py
(+43 files in other folders)
