[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pysilicon"
description = "Python tools for hardware design"
readme = {file = "readme.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
  {name = "Sundeep Rangan", email = "srangan@nyu.edu"},
]
keywords = ["xilinx", "fpga", "vivado", "vitis", "automation", "utilities"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]
dependencies = [
  "requests"
]
dynamic = ["version"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pysilicon*"]

[tool.setuptools_scm]
fallback_version = "0.1.0"
write_to = "pysilicon/_version.py"

[project.scripts]
xsim_vcd = "pysilicon.scripts.xsim_vcd:main"
collect_overlay = "pysilicon.scripts.collect_overlay:main"
sv_sim = "pysilicon.scripts.sv_sim:main"
sv_synth = "pysilicon.scripts.sv_build:run_synth"
sv_impl  = "pysilicon.scripts.sv_build:run_impl"
autograde_llm_latex = "pysilicon.scripts.autograde_llm_latex:entrypoint"
build_lab_autograder = "pysilicon.scripts.build_lab_autograder:main"
pysilicon_copy = "pysilicon.scripts.pysilicon_copy:main"